docs: :memo: 闭关思过

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -138,66 +138,6 @@ extra_css:
   - stylesheets/extra.css
 nav:
   - 主页: index.md
-  - 作业:
-      - coursework/index.md
-      - 计算机程序设计基础:
-          - coursework/cpd/README.md
-          - 加分作业：石头剪刀布: coursework/cpd/1/ex/README.md
-          - 加分作业：五子棋: coursework/cpd/2/ex/README.md
-          - 附加作业：调查问卷: coursework/cpd/3/ex/README.md
-          - 大作业：学生成绩管理系统: coursework/cpd/3/project/README.md
-          - 平时作业:
-              - 计算机程序设计基础(1):
-                  - coursework/cpd/README.md
-                  - coursework/cpd/1/01/README.md
-                  - coursework/cpd/1/02/README.md
-                  - coursework/cpd/1/03/README.md
-                  - coursework/cpd/1/04/README.md
-                  - coursework/cpd/1/05/README.md
-                  - coursework/cpd/1/06/README.md
-                  - coursework/cpd/1/07/README.md
-                  - coursework/cpd/1/08/README.md
-                  - coursework/cpd/1/09/README.md
-                  - coursework/cpd/1/10/README.md
-                  - coursework/cpd/1/11/README.md
-                  - coursework/cpd/1/12/README.md
-                  - coursework/cpd/1/13/README.md
-                  - coursework/cpd/1/14/README.md
-                  - coursework/cpd/1/15/README.md
-              - 计算机程序设计基础(2)春季学期:
-                  - coursework/cpd/README.md
-                  - coursework/cpd/2/01/README.md
-                  - coursework/cpd/2/02/README.md
-                  - coursework/cpd/2/03/README.md
-                  - coursework/cpd/2/04/README.md
-                  - coursework/cpd/2/05/README.md
-                  - coursework/cpd/2/06/README.md
-                  - coursework/cpd/2/07/README.md
-                  - coursework/cpd/2/08/README.md
-                  - coursework/cpd/2/09/README.md
-                  - coursework/cpd/2/10/README.md
-                  - coursework/cpd/2/11/README.md
-                  - coursework/cpd/2/12/README.md
-              - 计算机程序设计基础(2)夏季学期:
-                  - coursework/cpd/README.md
-                  - coursework/cpd/3/01/README.md
-                  - coursework/cpd/3/02/README.md
-                  - coursework/cpd/3/03/README.md
-      - coursework/pdmes.md
-      - 数据与算法:
-          - coursework/daa/README.md
-          - A + B Problem: coursework/daa/ans/1001.md
-          - The Nth Number in Fibonacci Sequence: coursework/daa/ans/1002.md
-          - 丢失的练习册: coursework/daa/ans/2023201.md
-          - 军训排队: coursework/daa/ans/2023202.md
-          - 比武: coursework/daa/ans/2023203.md
-          - 缺损二叉树: coursework/daa/ans/2023204.md
-          - 信息传递: coursework/daa/ans/2023205.md
-          - 跳跳乐: coursework/daa/ans/2023206.md
-          - 带限矩阵方程组求解: coursework/daa/ans/2023207.md
-          - 缺失数据恢复: coursework/daa/ans/2023208.md
-          - 小明的火车旅行计划: coursework/daa/ans/2023209.md
-          - 张量相乘的最小开销问题: coursework/daa/ans/2023210.md
   - 文档:
       - doc/index.md
       - 格式:
@@ -234,7 +174,6 @@ nav:
       - code/regex.md
       - C# & .NET:
           - code/csharp/index.md
-          - code/csharp/lambda.md
   - 系统:
       - os/index.md
       - Windows:
@@ -260,4 +199,6 @@ nav:
           - game/galgame/yuzusoft.md
   - 关于:
       - about/index.md
+      - Xuc 建站赋: https://www.panxuc.com/1970/01/01/xuc%e5%bb%ba%e7%ab%99%e8%b5%8b/
       - about/license.md
+      - about/privacy.md
